--- a/avocado/produce.html
+++ b/avocado/produce.html
@@ -3,27 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link type="text/css" href="style.css" rel="stylesheet">
+    <link type="text/css" href="restyle.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Freckle+Face|Frijole|Kirang+Haerang|Patrick+Hand+SC|Pompiere" rel="stylesheet">
   </head>
 
   <body>
 
-    <header>
-      <h1>Tito Tino's Avocados</h1>
-      <h3>Avoca-"do" Yourself a Favor and Try Our Avocados</h3>
-    </header>
-
-    <div class="container">
-      <div class="sidebar">
-        <ul>
-          <li><a href="home.html">Home</a></li>
-          <li><a href="produce.html">All About Avocados</a></li>
-          <li><a href="about.html">About Tito Tino's</a></li>
-          <li><a href="toast.html">Tino's Toast</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <nav class="navbar">
+      <p class="navTitle">
+        Tito Tino's Avocados
+      </p>
+      <div class="right">
+        <div class="hamburger">
+          <div class="hamLine"></div>
+          <div class="hamLine"></div>
+          <div class="hamLine"></div>
+        </div>
+        <div class="navCollapse">
+          <a href="home.html">Home</a>
+          <a href="produce.html">All About Avocados</a>
+          <a href="toast.html">Tino's Toast</a>
+          <a href="about.html">About Tito Tino's</a>
+          <a href="contact.html">Contact</a>
+        </div>
       </div>
+    </nav>
 
       <div class="content">
 
@@ -41,7 +45,7 @@
 <!-- 1 -->
       <div class="content">
 
-        <img src="https://www.californiaavocado.com/images/general-content/how-tos/varieties/bacon-img.jpg">
+        <img src="http://www.specialtyproduce.com/sppics/6658.png" height=300px>
         <br />
         <h2 class="center">The Bacon</h2>
         <h3 class="center">The Green One</h3>
@@ -53,7 +57,7 @@
 <!-- 2 -->
       <div class="content">
 
-        <img src="https://www.californiaavocado.com/images/general-content/how-tos/varieties/fuerte-img.jpg">
+        <img src="http://www.specialtyproduce.com/sppics/6723.png" height=300px>
         <br />
         <h2 class="center">The Fuerte</h2>
         <h3 class="center">The Original High Quality California Avocado</h3>
@@ -65,7 +69,7 @@
 <!-- 3 -->
       <div class="content">
 
-        <img src="https://www.californiaavocado.com/images/general-content/how-tos/varieties/gwen-img.jpg">
+        <img src="http://www.specialtyproduce.com/sppics/10956.png" height=300px>
         <br />
         <h2 class="center">The Gwen</h2>
         <h3 class="center">the slightly larger Haas</h3>
@@ -77,7 +81,7 @@
 <!-- 4 -->
       <div class="content">
 
-        <img src="https://www.californiaavocado.com/images/general-content/how-tos/varieties/hass-img.jpg">
+        <img src="http://www.specialtyproduce.com/sppics/949.png" height=300px>
         <br />
         <h2 class="center">The Hass</h2>
         <h3 class="center">the one you know</h3>
@@ -89,9 +93,9 @@
 <!-- 5 -->
       <div class="content">
 
-        <img src="https://www.californiaavocado.com/images/general-content/how-tos/varieties/lamb-hass-img.jpg">
+        <img src="http://www.specialtyproduce.com/sppics/9140.png" height=300px>
         <br />
-        <h2 class="center">The Lamb Haas</h2>
+        <h2 class="center">The Lambs Haas</h2>
         <h3 class="center">the California sun avocado</h3>
         <p>
           This huge avocado sports smooth, creamy flesh with a nutty taste. It's known for its beauty.
@@ -101,7 +105,7 @@
 <!-- 6 -->
       <div class="content">
 
-        <img src="https://www.californiaavocado.com/images/general-content/how-tos/varieties/pinkerton-img.jpg">
+        <img src="http://www.specialtyproduce.com/sppics/7520.png"  height=300px>
         <br />
         <h2 class="center">The Pinkerton</h2>
         <h3 class="center">the long boy</h3>
@@ -113,7 +117,7 @@
 <!-- 7 -->
       <div class="content">
 
-        <img src="https://www.californiaavocado.com/images/general-content/how-tos/varieties/reed-img.jpg">
+        <img src="http://www.specialtyproduce.com/sppics/7521.png" height=300px>
         <br />
         <h2 class="center">The Reed</h2>
         <h3 class="center">the round one</h3>
@@ -125,7 +129,7 @@
 <!-- 8 -->
       <div class="content">
 
-        <img src="https://media.giphy.com/media/5v0TxlJnuw9JS/giphy.gif">
+        <img src="http://www.specialtyproduce.com/sppics/6820.png" height=300px>
         <br />
         <h2 class="center">The Zutano</h2>
         <h3 class="center">the season opener</h3>
@@ -133,7 +137,11 @@
           This pear shaped, average size avocado is available as early as September, making it the first avocado on the market every year.
         </p>
       </div>
-
+      <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
+      <script src="script.js" type="text/javascript"></script>
     </div>
 
 
