--- a/avocado/home.html
+++ b/avocado/home.html
@@ -3,26 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link type="text/css" href="style.css" rel="stylesheet">
+    <link type="text/css" href="restyle.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Freckle+Face|Frijole|Kirang+Haerang|Patrick+Hand+SC|Pompiere" rel="stylesheet">
   </head>
 
   <body>
-    <header>
-      <h1>Tito Tino's Avocados</h1>
-      <h3>Avoca-"do" Yourself a Favor and Try Our Avocados</h3>
-    </header>
 
-
-      <div class="sidebar">
-        <ul>
-          <li><a href="home.html">Home</a></li>
-          <li><a href="produce.html">All About Avocados</a></li>
-          <li><a href="toast.html">Tino's Toast</a></li>
-          <li><a href="about.html">About Tito Tino's</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <nav class="navbar">
+      <p class="navTitle">
+        Tito Tino's Avocados
+      </p>
+      <div class="right">
+        <div class="hamburger">
+          <div class="hamLine"></div>
+          <div class="hamLine"></div>
+          <div class="hamLine"></div>
+        </div>
+        <div class="navCollapse">
+          <a href="home.html">Home</a>
+          <a href="produce.html">All About Avocados</a>
+          <a href="toast.html">Tino's Toast</a>
+          <a href="about.html">About Tito Tino's</a>
+          <a href="contact.html">Contact</a>
+        </div>
       </div>
+    </nav>
 
     <div class="content">
       <h3 class="center">"NEED" avocado toast NOW? Is your guacamole whack-amole?</h3>
@@ -32,7 +37,11 @@
         Tito Tino's Avocados is a small family-owned farm located in Lost Hills, California. Tito Tino is on a lifelong mission to promote the love of avocados across the world and to breed all varieties of avocados so future generations can enjoy the full spectrum of avocado diversity.
       </p>
     </div>
-
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+    <script src="script.js" type="text/javascript"></script>
   </body>
 
 </html>
