added animations and changed colors

--- a/avocado/about.html
+++ b/avocado/about.html
@@ -29,31 +29,34 @@
     </nav>
 
     <div class="content">
-      <h2>Meet Tito Tino</h2>
-      <img src="https://www.eurofresh-distribution.com/sites/default/files/styles/news_full/public/field/image/Mexico%20Avocado145.png?itok=kvgL0ueZ">
-      <p>
-        Tito Tino didn't always have a passion for avocados. In fact, he started out hating them. When he was eight years old, he was running in his grandparents' garden when he saw a beautiful bird with opalescent feathers and a look in its eyes like it <em>knew</em> something. Intrigued, Tinito followed the bird deep into the family orchard. It lead him to an avocado tree. When Tinito reached up to touch the bird, it suddenly flew off, shaking the branch it was perched on. The fattest avocado Tinito had ever seen broke off from the branch fell onto his face. He blacked out. When he woke, he saw his nose was broken, and he spent the rest of his childhood known as "Crooked Nose Tino" He swore never to touch an avocado again in his life.<br/>
-      </br/>
-        That meant no guacamole at his family reunions. There were no healthy fats in Tito Tino's household. Even the sight of a mortar and pestle made him sick to his stomach. His hatred of the avocado led him further and further away from his family, until it was just him in his small shack in Lost Hills, California. <br />
-        <br />
-        Tito Tino grew depressed. He started drinking heavily. He was known as the Poor Man's Scrouge in his community. He might have stayed this way, stayed lost, stayed <em>stuck</em> in his hatred, if not for one faithful night.<br />
-        <br />
-        It seemed like any other night. Tito Tino put himself to sleep with his usual nightcap, but for some reason, he couldn't sleep. He tossed and turned for hours. Then, he saw a glowing light at his window. He sat up in bed, for a moment thinking he'd imagined it. But then the flash of light came again. He stood up, went to his window, and saw the source of the glowing light. It was the bird he'd seen as a child.<br />
-        <br />
-        Another man might have walked outside, followed the bird, but Tito Tino knew better. He angrily shut his curtains to block out the light, but the glow shone bright despite the curtains. It was no ordinary light. Frustrated, he pushed his bookshelf in front of the window. The light faded. Relieved, Tito Tino turned to face his bed, but lo and behold, sitting upon it was the bird.<br />
-        <br />
-        "Who are you? What do you want?" Tito Tino snapped.<br />
-        <br />
-        The bird flapped its magnificent wings and moved towards Tito Tino. Even as he backed away, the bird tilted its neck forward and touched its beak to his forehead.<br />
-        <br />
-        Suddenly, Tito Tino was no longer on the human plane of existence. Eons passed. He saw the universe form, the heat and matter spinning into the universe we know. He watched the Earth form, life begin, all while feeling the energy of the universe course through him. He started to scream, but it wasn't enough to release the energy. His body felt hot, like it would disintegrate, because his human mind couldn't comprehend the knowledge he was being exposed to. He <em>knew</em>, just as the bird did. He knew the Truth.<br />
-        <br />
-        <em>Avocados.</em><br />
-        <br />
-        Sweat dripping from his brow, breath shallow, he met eyes with the bird as equals. He nodded and said, "I understand."<br />
-        <br />
-        Tito Tino dropped everything. The Truth had opened his eyes to his purpose, and he knew his life purpose was to grow avocados, to carry the legacy and wonder of the fruit and shepard it into the future. With his own two hands, he planted the foundation of Tito Tino's Avocado Farm, and since then it has grown into the most profitable avocado farm in the world.
-      </p>
+      <div class="container">
+        <h2>Meet Tito Tino</h2>
+        <img src="https://www.eurofresh-distribution.com/sites/default/files/styles/news_full/public/field/image/Mexico%20Avocado145.png?itok=kvgL0ueZ">
+        <p>
+          Tito Tino didn't always have a passion for avocados. In fact, he started out hating them. When he was eight years old, he was running in his grandparents' garden when he saw a beautiful bird with opalescent feathers and a look in its eyes like it <em>knew</em> something. Intrigued, Tinito followed the bird deep into the family orchard. It lead him to an avocado tree. When Tinito reached up to touch the bird, it suddenly flew off, shaking the branch it was perched on. The fattest avocado Tinito had ever seen broke off from the branch fell onto his face. He blacked out. When he woke, he saw his nose was broken, and he spent the rest of his childhood known as "Crooked Nose Tino" He swore never to touch an avocado again in his life.<br/>
+        </br/>
+          That meant no guacamole at his family reunions. There were no healthy fats in Tito Tino's household. Even the sight of a mortar and pestle made him sick to his stomach. His hatred of the avocado led him further and further away from his family, until it was just him in his small shack in Lost Hills, California. <br />
+          <br />
+          Tito Tino grew depressed. He started drinking heavily. He was known as the Poor Man's Scrouge in his community. He might have stayed this way, stayed lost, stayed <em>stuck</em> in his hatred, if not for one faithful night.<br />
+          <br />
+          It seemed like any other night. Tito Tino put himself to sleep with his usual nightcap, but for some reason, he couldn't sleep. He tossed and turned for hours. Then, he saw a glowing light at his window. He sat up in bed, for a moment thinking he'd imagined it. But then the flash of light came again. He stood up, went to his window, and saw the source of the glowing light. It was the bird he'd seen as a child.<br />
+          <br />
+          Another man might have walked outside, followed the bird, but Tito Tino knew better. He angrily shut his curtains to block out the light, but the glow shone bright despite the curtains. It was no ordinary light. Frustrated, he pushed his bookshelf in front of the window. The light faded. Relieved, Tito Tino turned to face his bed, but lo and behold, sitting upon it was the bird.<br />
+          <br />
+          "Who are you? What do you want?" Tito Tino snapped.<br />
+          <br />
+          The bird flapped its magnificent wings and moved towards Tito Tino. Even as he backed away, the bird tilted its neck forward and touched its beak to his forehead.<br />
+          <br />
+          Suddenly, Tito Tino was no longer on the human plane of existence. Eons passed. He saw the universe form, the heat and matter spinning into the universe we know. He watched the Earth form, life begin, all while feeling the energy of the universe course through him. He started to scream, but it wasn't enough to release the energy. His body felt hot, like it would disintegrate, because his human mind couldn't comprehend the knowledge he was being exposed to. He <em>knew</em>, just as the bird did. He knew the Truth.<br />
+          <br />
+          <em>Avocados.</em><br />
+          <br />
+          Sweat dripping from his brow, breath shallow, he met eyes with the bird as equals. He nodded and said, "I understand."<br />
+          <br />
+          Tito Tino dropped everything. The Truth had opened his eyes to his purpose, and he knew his life purpose was to grow avocados, to carry the legacy and wonder of the fruit and shepard it into the future. With his own two hands, he planted the foundation of Tito Tino's Avocado Farm, and since then it has grown into the most profitable avocado farm in the world.
+        </p>
+      </div>
+
     </div>
 
     <script
