--- a/avocado/contact.html
+++ b/avocado/contact.html
@@ -30,7 +30,9 @@
     </nav>
 
     <div class="content">
-      <h3 class="center">Ready to experience the RAPTUROUS joy of Tito Tino's Avocados?</h3>
+
+    <div class="container">
+      <h3 >Ready to experience the RAPTUROUS joy of Tito Tino's Avocados?</h3>
       <img src="https://res.cloudinary.com/tayjsolis/image/upload/v1525306760/lies.png" />
       <p>
         The only real way to KNOW the PURE and HOLY JOY of Tito Tino's AVOCADOS is to bring Yourself into the blessed land of Tito Tino's avocado farm. Sure, you could go to the store and BUY an AVOCADO, but avocados that have not been raised with LOVE and TRUTH can never compare to Tito Tino's AVOCADOS. <br />
@@ -39,6 +41,8 @@
         <br />
         So come. Summon the BIRD of KNOWLEDGE. Wander into the desert. Follow the LIGHT and ENERGY of the UNIVERSE until you find TRUTH.... and Tito Tino's Avocados.
       </p>
+    </div>
+
     </div>
     <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
