--- a/avocado/toast.html
+++ b/avocado/toast.html
@@ -29,7 +29,10 @@
     </nav>
 
     <div class="content">
-      <h1 class="center">No.</h1>
+      <div class="container">
+        <h1 >No.</h1>
+      </div>
+
     </div>
     <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
