--- a/avocado/home.html
+++ b/avocado/home.html
@@ -30,12 +30,15 @@
     </nav>
 
     <div class="content">
-      <h3 class="center">"NEED" avocado toast NOW? Is your guacamole whack-amole?</h3>
-      <img id="dancing" src="https://media.tenor.com/images/14b644ce509117071da7ba8a4dc1e71d/tenor.gif">
-      <h2 class="center">Look no further than Tito Tino's Avocados!!!</h2>
-      <p>
-        Tito Tino's Avocados is a small family-owned farm located in Lost Hills, California. Tito Tino is on a lifelong mission to promote the love of avocados across the world and to breed all varieties of avocados so future generations can enjoy the full spectrum of avocado diversity.
-      </p>
+      <div class="container first">
+        <h3 >"NEED" avocado toast NOW? Is your guacamole whack-amole?</h3>
+        <img id="dancing" src="https://media.tenor.com/images/14b644ce509117071da7ba8a4dc1e71d/tenor.gif">
+        <h2 >Look no further than Tito Tino's Avocados!!!</h2>
+        <p>
+          Tito Tino's Avocados is a small family-owned farm located in Lost Hills, California. Tito Tino is on a lifelong mission to promote the love of avocados across the world and to breed all varieties of avocados so future generations can enjoy the full spectrum of avocado diversity.
+        </p>
+      </div>
+
     </div>
     <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
