--- a/avocado/produce.html
+++ b/avocado/produce.html
@@ -31,121 +31,124 @@
 
       <div class="content">
 
-        <img src="https://media4.giphy.com/avatars/lisa-vertudaches/T7ui43amWX3E.gif">
-        <br />
-        <p>
-          The avocado's name may have origins in the Nahuatl word for "testicles," but the only thing ballsy about our avocados is their taste!<br />
+        <div class="container slides">
+          <img src="https://media4.giphy.com/avatars/lisa-vertudaches/T7ui43amWX3E.gif">
           <br />
-          The avocado (<em>persea americana</em>) may have originated in the Tehuacan Valley in what is now modern day Mexico. It had a wide range throughout all of Central and South America. It was first cultivated in what is now Peru, where evidence of cultivated plants have been dated as far back as 15000 years ago. <br /><br />
-          The avocado tree drows up to 66 feet tall, and the berry itself is 3-8 inches long and weighs 4-35 oz.<br /><br />
-          Today, 1.47 million tonnes of avocados are cultivated per year from Mexico alone.<br /><br />
-        </p>
-      </div>
+          <p>
+            The avocado's name may have origins in the Nahuatl word for "testicles," but the only thing ballsy about our avocados is their taste!<br />
+            <br />
+            The avocado (<em>persea americana</em>) may have originated in the Tehuacan Valley in what is now modern day Mexico. It had a wide range throughout all of Central and South America. It was first cultivated in what is now Peru, where evidence of cultivated plants have been dated as far back as 15000 years ago. <br /><br />
+            The avocado tree drows up to 66 feet tall, and the berry itself is 3-8 inches long and weighs 4-35 oz.<br /><br />
+            Today, 1.47 million tonnes of avocados are cultivated per year from Mexico alone.<br /><br />
+          </p>
+        </div>
+
 
 <!-- 1 -->
-      <div class="content">
+      <div class="container slides">
 
         <img src="http://www.specialtyproduce.com/sppics/6658.png" height=300px>
         <br />
-        <h2 class="center">The Bacon</h2>
-        <h3 class="center">The Green One</h3>
+        <h2 >The Bacon</h2>
+        <h3 >The Green One</h3>
         <p>
           The Bacon Avocado is a medium size known for its oval-shape, easy peeling, and light taste.
         </p>
       </div>
 
 <!-- 2 -->
-      <div class="content">
+      <div class="container slides">
 
         <img src="http://www.specialtyproduce.com/sppics/6723.png" height=300px>
         <br />
-        <h2 class="center">The Fuerte</h2>
-        <h3 class="center">The Original High Quality California Avocado</h3>
+        <h2 >The Fuerte</h2>
+        <h3 >The Original High Quality California Avocado</h3>
         <p>
           This pear shaped avocado has a fruit that grows up to 14oz. It has a great taste and creamy flesh.
         </p>
       </div>
 
 <!-- 3 -->
-      <div class="content">
+      <div class="container slides">
 
         <img src="http://www.specialtyproduce.com/sppics/10956.png" height=300px>
         <br />
-        <h2 class="center">The Gwen</h2>
-        <h3 class="center">the slightly larger Haas</h3>
+        <h2 >The Gwen</h2>
+        <h3 >the slightly larger Haas</h3>
         <p>
           This plump, large avocado has a pebbly, green skin and golden flesh.
         </p>
       </div>
 
 <!-- 4 -->
-      <div class="content">
+      <div class="container slides">
 
         <img src="http://www.specialtyproduce.com/sppics/949.png" height=300px>
         <br />
-        <h2 class="center">The Hass</h2>
-        <h3 class="center">the one you know</h3>
+        <h2 >The Hass</h2>
+        <h3 >the one you know</h3>
         <p>
           This world-famous avocado is the one you've probably seen in your supermarket or your guacamole. It is popular because it has a relatively longer shelf life compared to other avocados (yes, really!).
         </p>
       </div>
 
 <!-- 5 -->
-      <div class="content">
+      <div class="container slides">
 
         <img src="http://www.specialtyproduce.com/sppics/9140.png" height=300px>
         <br />
-        <h2 class="center">The Lambs Haas</h2>
-        <h3 class="center">the California sun avocado</h3>
+        <h2 >The Lambs Haas</h2>
+        <h3 >the California sun avocado</h3>
         <p>
           This huge avocado sports smooth, creamy flesh with a nutty taste. It's known for its beauty.
         </p>
       </div>
 
 <!-- 6 -->
-      <div class="content">
+      <div class="container slides">
 
         <img src="http://www.specialtyproduce.com/sppics/7520.png"  height=300px>
         <br />
-        <h2 class="center">The Pinkerton</h2>
-        <h3 class="center">the long boy</h3>
+        <h2 >The Pinkerton</h2>
+        <h3 >the long boy</h3>
         <p>
           This long, pear shaped avocado is ripe in early winter to the spring.
         </p>
       </div>
 
 <!-- 7 -->
-      <div class="content">
+      <div class="container slides">
 
         <img src="http://www.specialtyproduce.com/sppics/7521.png" height=300px>
         <br />
-        <h2 class="center">The Reed</h2>
-        <h3 class="center">the round one</h3>
+        <h2 >The Reed</h2>
+        <h3 >the round one</h3>
         <p>
           This adorable avocado grows to up to 18oz big!
         </p>
       </div>
 
 <!-- 8 -->
-      <div class="content">
+      <div class="container slides">
 
         <img src="http://www.specialtyproduce.com/sppics/6820.png" height=300px>
         <br />
-        <h2 class="center">The Zutano</h2>
-        <h3 class="center">the season opener</h3>
+        <h2 >The Zutano</h2>
+        <h3 >the season opener</h3>
         <p>
           This pear shaped, average size avocado is available as early as September, making it the first avocado on the market every year.
         </p>
       </div>
-      <script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
-      <script src="script.js" type="text/javascript"></script>
+
     </div>
 
 
 
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+    <script src="script.js" type="text/javascript"></script>
   </body>
 
 </html>
